# SCOPF

./: LICENSE
Multi_Bus/Distributed_Rho/: CMakeCache.txt  CMakeLists.txt  Gen14.txt  LMPresult.txt  Load3.txt~  Makefile  Makefile1  Makefile~  SerialCode  Tran118.txt  Tran14.txt  Tran300.txt  Tran48.txt~  Tran5.txt  Tran5.txt~  cmake_install.cmake  dualresult.txt  exec  generator.cpp  generator.cpp~  generator.h  gensolver.cpp  gensolver.h  itresult.txt  mainserialSCOPF.cpp  maintwoserialSCOPF.cpp~  network.cpp  network.cpp~  network.h  node.cpp  objective.txt  powerResult.txt  primresult.txt  result.txt  transl.cpp~
Multi_Bus/Distributed_Rho/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver  testsolver.c  util.c
Multi_Bus/SerialCode/: CMakeCache.txt  CMakeLists.txt  Gen118.txt  Gen30.txt  Gen3A_Text.txt  Gen3_Text.txt  Gen57.txt  LMPresult.txt  Load118.txt  Load300.txt  Load3A_Text.txt  Load3_Text.txt  Load57.txt  Makefile  Makefile1  SerialCode  Tran118.txt  Tran14.txt~  Tran3.txt~  Tran30.txt  Tran3A_Text.txt  Tran3_Text.txt  Tran48.txt  Tran5.txt  Tran57.txt  cmake_install.cmake  dualresult.txt  exec  generator.cpp  generator.h  gensolver.cpp  gensolver.h  gensolver.h~  itresult.txt  network.cpp  network.h  objective.txt  powerResult.txt  primresult.txt  result.txt
Two_Bus/SerialCode/: Makefile  Tran2.txt  Tran2.txt~  generator.cpp  generator.h~  gensolver.h  load.h  maintwoserialSCOPF.cpp  maintwoserialSCOPF.cpp~  network.cpp  network.cpp~  network.h  network.h~  (+5 more)
(+2587 files in other folders)
